# src/main/java/com/pragma/restaurants/domain/api/IRestaurantEmployeeServicePort.java
@@ -1,0 +1,8 @@
+package com.pragma.restaurants.domain.api;
+
+import com.pragma.restaurants.domain.model.RestaurantEmployee;
+
+public interface IRestaurantEmployeeServicePort {
+
+    RestaurantEmployee save(RestaurantEmployee restaurantEmployee);
+}
